--- a/assets/style/_responsive.scss
+++ b/assets/style/_responsive.scss
@@ -63,10 +63,7 @@
     }
 }
 
-// responsive login signup max width 768
-@media screen and (max-width:768px){
-    
-}
+
 
 
 @media screen and (min-width:600px) and (max-width:1080px){
